# cookiecutter-invenio-instance

./: cookiecutter.json
{{cookiecutter.project_shortname}}/: INSTALL.rst  pyproject.toml  run-tests.sh  setup.cfg
{{cookiecutter.project_shortname}}/docs/: conf.py
{{cookiecutter.project_shortname}}/scripts/: bootstrap  console  server  setup  update
{{cookiecutter.project_shortname}}/tests/: test_version.py
{{cookiecutter.project_shortname}}/tests/api/: conftest.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/: config.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/es_templates/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/es_templates/v7/: __init__.py  record.json
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/: api.py  config.py  ext.py  indexer.py  permissions.py  tasks.py  views.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/jsonschemas/records/: record-v1.0.0.json
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/loaders/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/marshmallow/: json.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/serializers/: __init__.py
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/templates/bootstrap3/records/: record.html
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/records/templates/semantic-ui/records/: record.html
{{cookiecutter.project_shortname}}/{{cookiecutter.package_name}}/theme/: webpack.py
