[tool.poetry]
name = "{{ cookiecutter.project_shortname }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
license = "MIT"

[tool.poetry.dependencies]
## Python packages dependencies (order matters)
#----------------------------------------------
python = ">= 3.9, <3.10"
python-dotenv = ">=0.13.0"
## Default from Invenio
lxml = ">=4.9.1"
marshmallow = ">=3.0.0,<4.0.0"
uwsgi = ">=2.0"
uwsgi-tools = ">=1.1.1"
uwsgitop = ">=0.11"

## Invenio 3.4 base modules
# Invenio core modules
invenio-app = ">=1.3.4,<1.4.0"
# upper pinned to minor due to flask 2.3 upgrade changes dependencies
invenio-base = ">=1.2.11,<1.3.0"
invenio-cache = ">=1.1.1,<2.0.0"
invenio-celery = ">=1.2.4,<1.3.0"
invenio-config = ">=1.0.3,<1.1.0"
invenio-i18n = ">=2.0.0,<3.0.0"
invenio-db = {version = ">=1.0.14,<1.2.0", extras = ["postgresql"]}
# Invenio base bundle
invenio-admin = ">=1.4.0,<1.5.0"
invenio-assets = ">=3.0.0,<4.0.0"
invenio-formatter = ">=2.0.0,<3.0.0"
invenio-logging = {version = ">=2.0.0,<3.0.0"} #, extras = ["sentry_sdk"]}
invenio-mail = ">=2.0.0,<3.0.0"
invenio-rest = ">=1.3.0,<1.4.0"
invenio-theme = ">=2.0.0,<3.0.0"
# Invenio auth bundle
invenio-access = ">=1.4.4,<1.5.0"
invenio-accounts = "2.1.0,<2.2.0"
invenio-oauth2server = "2.0.0,<2.1.0"
invenio-oauthclient = "2.2.0,<3.0.0"
invenio-userprofiles = ">=2.1.0,<2.2.0"
# Invenio metadata bundle
invenio-indexer = ">=2.2.0,<3.0.0"
invenio-jsonschemas = ">=1.1.4,<1.2.0"
invenio-oaiserver = ">=2.2.0,<2.3.0"
invenio-pidstore = ">=1.3.0,<1.4.0"
invenio-records-rest = ">=2.2.0,<2.3.0"
invenio-records-ui = ">=1.2.0,<1.3.0"
invenio-records = ">=2.2.1,<3.0.0"
invenio-search-ui = ">=2.3.0,<3.0.0"
invenio-search = {version = ">=2.1.0,<3.0.0", extras = ["elasticsearch7"]}

## Third party optional modules
# Pinned due to before_first_request deprecation https://flask.palletsprojects.com/en/2.2.x/api/#flask.Flask.before_first_request
Flask = ">=2.2.0,<2.3.0"
sentry-sdk = ">=1.0.0"
Flask-Debugtoolbar = ">=0.10.1,<1.0.0"
Werkzeug = ">=2.2.0,<2.3.0"

[tool.poetry.dev-dependencies]
## Python packages development dependencies (order matters)
#----------------------------------------------------------
## Default from Invenio
pytest-black = ">=0.3.0"
pytest-invenio = ">=2.1.0,<3.0.0"
# TODO: ther is a problem with sphinx 3.4.2
# RuntimeError: Working outside of application context.
Sphinx = ">=4.5.0"
autoflake = ">=1.3.1"
Flask-Debugtoolbar = ">=0.10.1"

[tool.poetry.plugins."console_scripts"]
{{ cookiecutter.project_shortname }} = "invenio_app.cli:cli"

[tool.poetry.plugins."invenio_assets.webpack"]
{{ cookiecutter.package_name }}_theme = "{{ cookiecutter.package_name }}.theme.webpack:theme"
{{ cookiecutter.package_name }}_search_app = "{{ cookiecutter.package_name }}.records.webpack:search_app"

[tool.poetry.plugins."invenio_base.api_blueprints"]
{%- if cookiecutter.datamodel == 'Custom' %}
[tool.poetry.plugins."invenio_base.api_apps"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.records:{{ cookiecutter.datamodel_extension_class }}"

[tool.poetry.plugins."invenio_jsonschemas.schemas"]
{{ cookiecutter.package_name}} = "{{ cookiecutter.package_name}}.records.jsonschemas"

[tool.poetry.plugins."invenio_search.mappings"]
records = "{{ cookiecutter.package_name}}.records.mappings"

[tool.poetry.plugins."invenio_search.templates"]
records = "{{ cookiecutter.package_name}}.es_templates:list_es_templates"
{%- endif %}

[tool.poetry.plugins."invenio_base.apps"]
{%- if cookiecutter.datamodel == 'Custom' %}
{{ cookiecutter.package_name }}_records = "{{ cookiecutter.package_name }}.records:{{ cookiecutter.datamodel_extension_class }}"
{%- endif %}

[tool.poetry.plugins."invenio_base.blueprints"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.theme.views:blueprint"
{%- if cookiecutter.datamodel == 'Custom' %}
{{ cookiecutter.package_name }}_records = "{{ cookiecutter.package_name }}.records.views:blueprint"
{%- endif %}

[tool.poetry.plugins."invenio_config.module"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.config"

[tool.poetry.plugins."invenio_i18n.translations"]
messages = "{{ cookiecutter.package_name }}"

[tool.poetry.plugins."flask.commands"]
[tool.poetry.plugins."invenio_db.alembic"]
[tool.poetry.plugins."invenio_db.models"]
[tool.poetry.plugins."invenio_pidstore.fetchers"]
[tool.poetry.plugins."invenio_pidstore.minters"]
[tool.poetry.plugins."invenio_records.jsonresolver"]
[tool.poetry.plugins."invenio_celery.tasks"]

[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "poetry.core.masonry.api"